fix missing border colour

--- a/web/app/styles/ProjectViewStyle.css
+++ b/web/app/styles/ProjectViewStyle.css
@@ -177,6 +177,10 @@ html.light .bb-xgrid-focus {
   stroke: #709775 !important;
 }
 
+.bb-target-occurrences .bb-bar {
+  stroke: #dc2626 !important;
+}
+
 @media (max-width: 640px) {
   .custom-space-x-style > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0 !important;
